# cw6_skymarket

./: pyproject.toml  requirements.txt
skymarket/ads/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20220922_2306.py  0003_ad_image.py  0004_auto_20220922_2318.py  0005_auto_20220922_2318.py  0006_alter_comment_created_at.py  0007_alter_comment_ad.py  0008_alter_comment_ad.py
skymarket/ads/models/: ads.py  comments.py
skymarket/ads/serializers/: ads.py  comments.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_remove_user_first_name.py  0003_user_first_name.py  0004_user_is_active.py  0005_auto_20220922_2306.py  0006_auto_20220922_2323.py  0007_alter_user_is_active.py  0008_alter_user_first_name_alter_user_last_name_and_more.py
