[tool.poetry]
name = "cw6-skymarket"
version = "0.1.0"
description = ""
authors = ["K-Maxim <m.karpenko96@mail.ru>"]
readme = "README.md"
packages = [{include = "cw6_skymarket"}]

[tool.poetry.dependencies]
python = "^3.10"
drf-spectacular = "^0.24.0"
djangorestframework-simplejwt = "^5.2.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
